--- a/www/html-partials/appHeader.hbs
+++ b/www/html-partials/appHeader.hbs
@@ -6,8 +6,7 @@
   </div>
   <div class="pl-4 pt-0">
     <div id="header_title">
-      <span class="h4 lh80">Denúncia de</span>
-      <span class="h4 lh80">Estacionamento</span>
+      <span>No meu Bairro!</span>
     </div>
     <div id="header_for_map">
       <select class="form-control input-lg" id="map_view_select" name="Tipo de visualização do mapa"></select>
