--- a/www/html-partials/head.hbs
+++ b/www/html-partials/head.hbs
@@ -1,6 +1,6 @@
 <meta charset="utf-8">
 
-<title>Denúncia de Estacionamento</title>
+<title>No meu Bairro!</title>
 
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link rel="icon" href="favicon.ico" type="image/x-icon">
