--- a/www/html-partials/mainForm.hbs
+++ b/www/html-partials/mainForm.hbs
@@ -39,31 +39,6 @@
 
   <hr>
 
-  <h3>Dados do veículo</h3>
-  <div class="row">
-
-    <div id="plateDiv" class="col-xs-12 col-sm-4 form-group">
-      <label for="plate">Matrícula</label>
-      <div>Formato Livre <input type="checkbox" id="free_plate"></div>
-      <input class="form-control input-lg mandatory" maxlength="8"
-             id="plate" name="Matrícula do veículo" type="text" required>
-    </div>
-
-    <div class="col-xs-12 col-sm-4 form-group">
-      <label for="carmake">Marca</label>
-      <input class="form-control input-lg" id="carmake"
-             name="Marca do veículo" placeholder="Opel" type="text">
-    </div>
-
-    <div class="col-xs-12 col-sm-4 form-group">
-      <label for="carmodel">Modelo</label>
-      <input class="form-control input-lg" id="carmodel"
-             name="Modelo do veículo" placeholder="Corsa" type="text">
-    </div>
-  </div>
-
-  <hr>
-
   <h3>Data e local</h3>
 
   <div class="row">
@@ -100,11 +75,11 @@
 
    <hr>
 
-   <h3>Base legal</h3>
+   <h3>Anomalia</h3>
 
    <div class="row">
       <div class="form-group col-xs-12 col-sm-6 col-md-3 ">
-        <label for="penalties">Tipo de Ocorrência</label>
+        <label for="penalties">Tipo de Anomalia</label>
         <select class="form-control input-lg mandatory"
                 id="penalties" name="Tipo de Ocorrência">
         </select>
@@ -113,7 +88,7 @@
 
     <hr>
 
-    <h3>Autoridade</h3>
+    <h3>Município provável</h3>
 
     <div class="row">
       <div class="form-group col-xs-12 col-sm-6 col-md-3 ">
