--- a/www/html-partials/textSections.hbs
+++ b/www/html-partials/textSections.hbs
@@ -1,104 +1,23 @@
-<div id="legal_basis" class="section">
-    <h3>Esta App funciona</h3>
-    <p class="lead">
-      A Polícia confirma que dá seguimento às queixas dos cidadãos por esta via,
-      de acordo com o estipulado no n.º 5 do artigo 170.º do Código da Estrada. Em Lisboa por exemplo, entre janeiro e março de 2017,
-      em apenas três meses, foram levantados mais de mil autos com esta origem.
-    </p>
-    <h3>Foto de apenas um carro</h3>
-    <p class="lead">
-      Para assegurar o dever de imparcialidade por parte da autoridade policial,
-      as fotos que enviar deverão conter apenas <b>um</b> veículo ilegalmente estacionado,
-      ou seja, o veículo o qual reporta.
-    </p>
-    <h3>Falso testemunho é crime</h3>
-    <p class="lead">
-      Ao abrigo do artigo 348.º-A do Código Penal, quem declarar ou atestar falsamente à autoridade pública,
-      nomeadamente um agente da autoridade policial no exercício das suas funções,
-      é punido com pena de prisão até um ano ou com pena de multa.
-    </p>
-</div>
-
-<div id="cmd_how_it_works" class="section">
-  <h3>Adira à Chave Móvel Digital</h3>
-  <p class="lead">
-    Terá de <a class="aderir_url">aderir</a> ao serviço da Chave Móvel Digital onde associa o seu número de telemóvel à
-    sua identidade associada ao Cartão de Cidadão. Pode fazê-lo na internet fazendo uso do seu cartão de cidadão
-    e de um leitor de cartões, ou no portal das finanças.
-  </p>
-  <h3>Ative a assinatura digital</h3>
-  <p class="lead">
-    Após ter obtido uma Chave Móvel Digital com os respetivos PINs,
-    terá de <a class="a_minha_area_url">aceder</a> à sua área da Chave Móvel Digital e ativar a opção
-    "Subscrição da Assinatura Digital".
-    <img alt="Ativar a assinatura digital" src="img/ativar_a_assinatura_digital.jpeg">
-  </p>
-  <h3>Assine o PDF gerado</h3>
-  <p class="lead">
-    A presente APP gera um ficheiro PDF com a denúncia que fica guardado no seu telefone.
-    Pode <a class="assinar_pdf_url">assinar esse PDF</a> fazendo uso
-    da sua Chave Móvel Digital. Para confirmar a sua identidade durante a assinatura do PDF,
-    receberá um código via sms no seu telefone, ou então também pode usar a
-    <a class="app_CMD_url">APP do Cartão do Cidadão</a> para obter os códigos sem a necessidade de um sms.
-  </p>
-</div>
-
-<div id="cmd_legal_basis" class="section">
-  <h4>Base legal da Chave Móvel Digital</h4>
-  <p class="lead">
-    Caso o PDF tenha anexo o seu certificado digital,
-    <b>tal será equivalente, de acordo com a Lei, à sua presenção nas instalações da polícia</b>.
-    A Autoridade Nacional de Segurança Rodoviária – ANSR – consigna que os agentes de autoridade,
-    mediante denúncia de um cidadão, deverão levantar auto de contraordenação,
-    tornando-se necessário recolher os elementos probatórios que sustentem
-    formalmente os documentos de denúncia,
-    conforme o n.º 3 do artigo 170.º do Código Estrada (CE).
-    <br><br>
-    Todavia, se esta denúncia for enviada com certificado digital da Chave Móvel Digital,
-    tal implica que a presunção de autoria do denunciante é válida,
-    de acordo com a <b>alínea b) do n.º 2 do artigo 4.º da Lei n.º 37/2014
-    reforçada pela Lei n.º 32/2017 na mesma alínea, número e artigo</b>.
-    De acordo com a referida lei, o uso de certificado digital,
-    designadamente o constante do cartão de cidadão
-    associado à Chave Móvel Digital, para efeitos de presunção de autoria,
-    é um meio válido para apresentação de atos jurídicos junto dos serviços do Estado,
-    dispensando-se, assim, a assinatura do cidadão e a sua presença física junto
-    dos referidos serviços públicos.
-    <br><br>
-    Ou seja, de acordo com o <b>n.º 1 do artigo 4.º da Lei n.º 37/2014</b>,
-    os atos praticados por um cidadão junto da Administração Pública presumem-se ser da sua autoria,
-    dispensando-se a sua assinatura,
-    sempre que sejam utilizados meios de autenticação segura para o efeito,
-    meios esses, que de acordo com o número 2 do mesmo artigo,
-    incluem o uso de certificado digital constante do cartão de cidadão.
-    <br><br>
-    Por conseguinte, terão os agentes da autoridade a quem endereça a denúncia,
-    de acordo com a referida alínea b) do n.º 2 do artigo 4.º da Lei n.º 37/2014,
-    de considerar a sua queixa por meios eletrónicos, como legalmente equivalente
-    àquela que eventualmente poderia fazer presencialmente.
-  </p>
-</div>
-
 <div id="privacy_policy" class="section">
   <h4>Quem está a fazer o pedido de dados?</h4>
   <p class="lead">
-    A APP "Denúncia de Estacionamento" foi desenvolvida por João Pimentel Ferreira, com a contribuição valiosa de Daniel Gomes para a versão iOS,
-    tendo sido promovida pelo Passeio Livre enquanto entidade coletiva que promove a defesa dos utilizadores dos espaços pedonais.
+    A APP "No meu Bairro!" foi desenvolvida por João Pimentel Ferreira, com a contribuição valiosa de Daniel Gomes para a versão iOS,
+    tendo sido promovida com o intuito de aproximar os cidadãos munícipes com os seus serviços municipais.
   </p>
   <h4>Que dados estão a ser requeridos?</h4>
   <p class="lead">
     Os dados que a APP pede fazendo uso do Nominatim do Open Street Maps, são unicamente dados referentes à sua localização (latitude e longitude),
-    para assim podermos calcular com a precisão possível o endereço da ocorrência.
+    para assim podermos calcular com a precisão possível o endereço da ocorrência ou anomalia.
     Esta APP não envia ao Open Street Maps quaisquer dados que não seja a sua geolocalização e de forma completamente anónima.
-    Adicionalmente, os dados das denúncias são anonimamente, i.e., sem qualquer informação relativa ao denunciante, guardados numa base de dados.
+    Adicionalmente, os dados das anomalias são anonimamente, i.e., sem qualquer informação relativa ao denunciante, guardados numa base de dados.
     Os seus dados pessoais que colocar na APP ficarão guardados apenas e somente no seu dispositivo, para futuras ocorrências.
-    Ao abrigo da lei de proteção de dados, as autoridades policiais não revelam os dados do denunciante.
+    Ao abrigo da lei de proteção de dados, os municípios não revelam os dados do requerente.
   </p>
   <h4>Porque motivo fazemos esta recolha de dados?</h4>
   <p class="lead">
     Os dados geográficos referentes ao serviço Nominatim do Open Street Maps são usados para calcular com precisão o endereço postal da ocorrência,
-    para assim o utilizador poder emitir a denúncia de forma automatizada.
-    Os dados das denúncias, excetuando os dados do denunciante,
+    para assim o utilizador poder redigir a comunicação ao município de forma automatizada.
+    Os dados das anomalias, excetuando os dados do utilizador que as comunica,
     são recolhidos anonimamente para processamento estatístico e para evitar abusos na utilização desta aplicação.
     Queremos também providenciar informação geográfica aos nossos utilizadores sobre as diversas ocorrências.
   </p>
