--- a/www/html-partials/mainForm.hbs
+++ b/www/html-partials/mainForm.hbs
@@ -79,9 +79,9 @@
 
    <div class="row">
       <div class="form-group col-xs-12 col-sm-6 col-md-3 ">
-        <label for="penalties">Tipo de Anomalia</label>
+        <label for="anomalies">Tipo de Anomalia</label>
         <select class="form-control input-lg mandatory"
-                id="penalties" name="Tipo de Ocorrência">
+                id="anomalies" name="Tipo de Ocorrência">
         </select>
       </div>
     </div>
