--- a/www/html-partials/scripts.hbs
+++ b/www/html-partials/scripts.hbs
@@ -16,7 +16,7 @@
 <script src="js/credentials.js"></script>
 <script src="js/contacts.js"></script>
 <script src="js/contactsFunctions.js"></script>
-<script src="js/penalties.js"></script>
+<script src="js/anomalies.js"></script>
 <script src="js/functions.js"></script>
 <script src="js/file.js"></script>
 <script src="js/dbServerLink.js"></script>
