--- a/www/html-partials/mainForm.hbs
+++ b/www/html-partials/mainForm.hbs
@@ -62,7 +62,7 @@
     <div class="form-group col-xs-12 col-sm-6 col-md-3 ">
       <label for="parish">Freguesia</label>
       <input size="35" class="form-control input-lg mandatory"
-             id="parish" name="Localidade da ocorrência" placeholder="Oeiras" type="text" required>
+             id="parish" name="Localidade da ocorrência" placeholder="Santa Maria Maior" type="text" required>
     </div>
 
     <div class="form-group col-xs-12 col-sm-6 col-md-3 ">
@@ -92,19 +92,6 @@
         </select>
       </div>
     </div>
-
-    <hr>
-
-    <h3>Contacto</h3>
-
-    <div class="row">
-      <div class="form-group col-xs-12 col-sm-6 col-md-3 ">
-        <p>Esta lista é atualizada em função do município da ocorrência</p>
-        <select class="form-control input-lg mandatory"
-                id="authority" name="Autoridade governativa">
-        </select>
-      </div>
-  </div>
 
   <hr>
   <button aria-label="Gerar mensagem a enviar" type="button" class="btn btn-success" id="generate_message">Gerar texto</button>
