--- a/www/html-partials/mainForm.hbs
+++ b/www/html-partials/mainForm.hbs
@@ -56,13 +56,13 @@
     <div class="form-group col-xs-12 col-sm-6 col-md-3 ">
       <label for="municipality">Concelho</label>
       <input size="35" class="form-control input-lg mandatory"
-             id="municipality" name="Localidade da ocorrência" placeholder="Oeiras" type="text" required>
+             id="municipality" name="Concelho da ocorrência" placeholder="Oeiras" type="text" required>
     </div>
 
     <div class="form-group col-xs-12 col-sm-6 col-md-3 ">
       <label for="parish">Freguesia</label>
-      <input size="35" class="form-control input-lg mandatory"
-             id="parish" name="Localidade da ocorrência" placeholder="Santa Maria Maior" type="text" required>
+      <input size="35" class="form-control input-lg"
+             id="parish" name="Freguesia da ocorrência" placeholder="Santa Maria Maior" type="text" required>
     </div>
 
     <div class="form-group col-xs-12 col-sm-6 col-md-3 ">
