--- a/www/html-partials/mainForm.hbs
+++ b/www/html-partials/mainForm.hbs
@@ -55,14 +55,16 @@
 
     <div class="form-group col-xs-12 col-sm-6 col-md-3 ">
       <label for="municipality">Concelho</label>
-      <input size="35" class="form-control input-lg mandatory"
-             id="municipality" name="Concelho da ocorrência" placeholder="Oeiras" type="text" required>
+      <select class="form-control input-lg mandatory"
+             id="municipality" name="Concelho da ocorrência">
+      </select>
     </div>
 
     <div class="form-group col-xs-12 col-sm-6 col-md-3 ">
       <label for="parish">Freguesia</label>
-      <input size="35" class="form-control input-lg"
-             id="parish" name="Freguesia da ocorrência" placeholder="Santa Maria Maior" type="text" required>
+      <select class="form-control input-lg"
+             id="parish" name="Freguesia da ocorrência">
+      </select>
     </div>
 
     <div class="form-group col-xs-12 col-sm-6 col-md-3 ">
