--- a/www/html-partials/appHeader.hbs
+++ b/www/html-partials/appHeader.hbs
@@ -1,12 +1,12 @@
 <div class="container-fluid section-head d-flex flex-row">
   <div class="p-1">
-    <button aria-label="Mostrar ou esconder menu" type="button" id="sidebarCollapse" class="btn btn-dark d-inline-block d-lg-none ml-auto">
+    <button aria-label="Mostrar ou esconder menu" type="button" id="sidebarCollapse" class="btn btn-dark d-inline-block ml-auto">
       <i class="fa fa-bars"></i>
     </button>
   </div>
-  <div class="pl-4 pt-0">
+  <div class="pl-4 pt-0 d-flex align-items-center">
     <div id="header_title">
-      <span>No meu Bairro!</span>
+      <span>No Meu Bairro!</span>
     </div>
     <div id="header_for_map">
       <select class="form-control input-lg" id="map_view_select" name="Tipo de visualização do mapa"></select>
