--- a/www/html-partials/mainForm.hbs
+++ b/www/html-partials/mainForm.hbs
@@ -2,15 +2,15 @@
   <h3>Imagens</h3>
   <div id="image_selector">
     <div class="row">
-      <div class="form-group col-xs-12 col-sm-6 col-md-3 img-container">
-        <div class="form-group col-xs-12 col-sm-6 col-md-3">
+      <div class="form-group img-container col-md">
+        <div class="form-group col-xs-12">
           <button aria-label="Adicionar Foto 1" type="button" class="btn btn-primary" id="addImg_1"><i class="fa fa-plus"></i></button>
           <button aria-label="Remover Foto 1" type="button" class="btn btn-primary" id="remImg_1"><i class="fa fa-minus"></i></button>
         </div>
         <!-- [html-validate-disable-next attribute-allowed-values] -->
         <img alt="Imagem 1" id="myImg_1" src="" class="col-xs-12">
       </div>
-      <div class="form-group col-xs-12 col-sm-6 col-md-3 img-container">
+      <div class="form-group img-container col-md">
         <div class="form-group col-xs-12 col-sm-6 col-md-3">
           <button aria-label="Adicionar Foto 2" type="button" class="btn btn-primary" id="addImg_2"><i class="fa fa-plus"></i></button>
           <button aria-label="Remover Foto 2" type="button" class="btn btn-primary" id="remImg_2"><i class="fa fa-minus"></i></button>
@@ -18,16 +18,16 @@
         <!-- [html-validate-disable-next attribute-allowed-values] -->
         <img alt="Imagem 2" id="myImg_2" src="" class="col-xs-12">
       </div>
-      <div class="form-group col-xs-12 col-sm-6 col-md-3 img-container">
-        <div class="form-group col-xs-12 col-sm-6 col-md-3">
+      <div class="form-group img-container col-md">
+        <div class="form-group col-xs-12">
           <button aria-label="Adicionar Foto 3" type="button" class="btn btn-primary" id="addImg_3"><i class="fa fa-plus"></i></button>
           <button aria-label="Remover Foto 3" type="button" class="btn btn-primary" id="remImg_3"><i class="fa fa-minus"></i></button>
         </div>
         <!-- [html-validate-disable-next attribute-allowed-values] -->
         <img alt="Imagem 3" id="myImg_3" src="" class="col-xs-12">
       </div>
-      <div class="form-group col-xs-12 col-sm-6 col-md-3 img-container">
-        <div class="form-group col-xs-12 col-sm-6 col-md-3">
+      <div class="form-group img-container col-md">
+        <div class="form-group col-xs-12">
           <button aria-label="Adicionar Foto 4" type="button" class="btn btn-primary" id="addImg_4"><i class="fa fa-plus"></i></button>
           <button aria-label="Remover Foto 4" type="button" class="btn btn-primary" id="remImg_4"><i class="fa fa-minus"></i></button>
         </div>
@@ -42,41 +42,52 @@
   <h3>Data e local</h3>
 
   <div class="row">
-    <div class="col-xs-12 col-md-6 form-group">
+    <div class="form-group col-sm-3">
       <button aria-label="Atualizar Data e Local" type="button" class="btn btn-primary ml-2" id="getCurrentAddresBtn"><i class="fa fa-refresh"></i></button>
       <br><br>
       <label for="date">Data </label>
       <input class="form-control input-lg mandatory" type="text" id="date" name="Data" required>
     </div>
-    <div class="col-xs-12 col-md-6 form-group">
-      <label for="time">Hora</label>
-      <input class="form-control input-lg mandatory" id="time" name="Hora" type="time">
+
+    <div class="col-sm-3 d-flex align-items-end">
+      <div class="form-group w-100">
+        <label for="time">Hora</label>
+        <input class="form-control input-lg mandatory" id="time" name="Hora" type="time">
+      </div>
     </div>
 
-    <div class="form-group col-xs-12 col-sm-6 col-md-3 ">
-      <label for="municipality">Concelho</label>
-      <select class="form-control input-lg mandatory"
-             id="municipality" name="Concelho da ocorrência">
-      </select>
+    <div class="col-sm-5 d-flex align-items-end">
+      <div class="form-group w-100">
+        <label for="municipality">Concelho</label>
+        <select class="form-control input-lg mandatory"
+               id="municipality" name="Concelho da ocorrência">
+        </select>
+      </div>
     </div>
 
-    <div class="form-group col-xs-12 col-sm-6 col-md-3 ">
-      <label for="parish">Freguesia</label>
-      <select class="form-control input-lg"
-             id="parish" name="Freguesia da ocorrência">
-      </select>
+    <div class="col-sm-5 d-flex align-items-end">
+      <div class="form-group w-100">
+        <label for="parish">Freguesia</label>
+        <select class="form-control input-lg"
+               id="parish" name="Freguesia da ocorrência">
+        </select>
+      </div>
     </div>
 
-    <div class="form-group col-xs-12 col-sm-6 col-md-3 ">
-      <label for="street">Local (rua, avenida, praceta, etc.)</label>
-      <input size="35" class="form-control input-lg mandatory"
-             id="street" name="Local da ocorrência" placeholder="Rua do Ouro" type="text" required>
+    <div class="col-sm-5 d-flex align-items-end">
+      <div class="form-group w-100">
+        <label for="street">Local (rua, avenida, praceta, etc.)</label>
+        <input size="35" class="form-control input-lg mandatory"
+               id="street" name="Local da ocorrência" placeholder="Rua do Ouro" type="text" required>
+      </div>
     </div>
 
-    <div class="form-group col-xs-12 col-sm-6 col-md-3 ">
-      <label for="street_number">Junto ao Número</label>
-      <input size="4" class="form-control input-lg"
-             id="street_number" name="Número postal do Local da Ocorrência" type="text">
+    <div class="col-sm-2 d-flex align-items-end">
+      <div class="form-group w-100">
+        <label for="street_number">Junto ao Número</label>
+        <input size="4" class="form-control input-lg"
+               id="street_number" name="Número postal do Local da Ocorrência" type="text">
+      </div>
     </div>
    </div>
 
@@ -85,8 +96,8 @@
    <h3>Anomalia</h3>
 
    <div class="row">
-      <div id="anomalies" class="form-group col-xs-12 col-sm-6 col-md-3 ">
-        <select class="form-control input-lg mandatory"
+      <div id="anomalies" class="form-group col-sm">
+        <select class="form-control input-lg mandatory mb-2"
                 id="anomaly1" name="Tipo Principal de Ocorrência">
         </select>
         <select class="form-control input-lg mandatory"
