--- a/www/html-partials/mainForm.hbs
+++ b/www/html-partials/mainForm.hbs
@@ -45,7 +45,7 @@
     <div class="form-group col-sm-3">
       <button aria-label="Atualizar Data e Local" type="button" class="btn btn-primary ml-2" id="getCurrentAddresBtn"><i class="fa fa-refresh"></i></button>
       <br><br>
-      <label for="date">Data </label>
+      <label for="date">Data</label>
       <input class="form-control input-lg mandatory" type="text" id="date" name="Data" required>
     </div>
 
@@ -68,7 +68,7 @@
     <div class="col-sm-5 d-flex align-items-end">
       <div class="form-group w-100">
         <label for="parish">Freguesia</label>
-        <select class="form-control input-lg"
+        <select class="form-control input-lg mandatory"
                id="parish" name="Freguesia da ocorrência">
         </select>
       </div>
