--- a/www/css/main.css
+++ b/www/css/main.css
@@ -154,3 +154,13 @@ button#save_personal_data {
   background-position:right center;
   background-repeat: no-repeat;
 }
+
+.historic-loading {
+  background-color: transparent;
+  background-image: url("res/images/loading.gif") !important;
+  background-size: 60px 60px;
+  background-position:center center;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 150px;
+}
