incluir NIF como dado pessoal, issue #5

--- a/www/html-partials/personalData.hbs
+++ b/www/html-partials/personalData.hbs
@@ -13,8 +13,12 @@
       </select>
     </div>
     <div class="col-xs-12 col-sm-2 form-group">
-      <label for="id_number">Número </label>
+      <label for="id_number">Número de Identificação</label>
       <input size="30" id="id_number" name="O seu número de identificação" class="form-control input-lg mandatory personal_info" placeholder="00000000" type="text" required>
+    </div>
+    <div class="col-xs-12 col-sm-2 form-group">
+      <label for="nif">NIF</label>
+      <input size="30" id="nif" name="O seu NIF" class="form-control input-lg mandatory personal_info" placeholder="00000000" type="text" required>
     </div>
     <div class="col-xs-12 col-sm-5 form-group">
       <label for="address">A sua Morada </label>
