--- a/www/html-partials/personalData.hbs
+++ b/www/html-partials/personalData.hbs
@@ -43,4 +43,15 @@
       <button aria-label="Guardar dados" type="button" class="btn btn-success" id="save_personal_data"><i class="fa fa-save"></i></button>
     </div>
   </div>
+
+  <p class="text-justify">
+    Ao abrigo do artigo 102.º do Código do Procedimento Administrativo,
+    aprovado pelo Decreto-Lei n.º 4/2015, de 07 de janeiro, todos os estes dados são necessários
+    para proceder a este tipo de denúncias junto de autoridade pública.
+  </p>
+  <p class="text-justify">
+    Não guardamos, processamos nem armazenamos os seus dados em nenhuma base de dados, muito menos partilhmo-los.
+    Os seus dados pessoais ficarão guardados apenas e tão-somente no seu dispotivo para futuras ocorrências.
+  </p>
+
 </div>
