improvement of info

--- a/www/html-partials/personalData.hbs
+++ b/www/html-partials/personalData.hbs
@@ -5,7 +5,7 @@
       <input size="30" id="name" name="O seu Nome Completo" class="form-control input-lg mandatory personal_info" type="text" required>
     </div>
     <div class="col-xs-12 col-sm-2 form-group">
-      <label for="id_type">A sua Identificação</label>
+      <label for="id_type">Tipo de Identificação</label>
       <select class="form-control input-lg personal_info" id="id_type">
         <option>Cartão de Cidadão</option>
         <option>Bilhete de Identidade</option>
