--- a/www/html-partials/personalData.hbs
+++ b/www/html-partials/personalData.hbs
@@ -46,12 +46,12 @@
 
   <p class="text-justify">
     Ao abrigo do artigo 102.º do Código do Procedimento Administrativo,
-    aprovado pelo Decreto-Lei n.º 4/2015, de 07 de janeiro, todos os estes dados são necessários
+    aprovado pelo Decreto-Lei n.º 4/2015, de 07 de janeiro, todos os dados supra-mencionados são necessários
     para proceder a este tipo de denúncias junto de autoridade pública.
   </p>
   <p class="text-justify">
     Não guardamos, processamos nem armazenamos os seus dados em nenhuma base de dados, muito menos partilhmo-los.
-    Os seus dados pessoais ficarão guardados apenas e tão-somente no seu dispotivo para futuras ocorrências.
+    Os seus dados pessoais ficarão guardados apenas e tão-somente aqui no seu dispositivo para futuras ocorrências.
   </p>
 
 </div>
