--- a/www/html-partials/mainForm.hbs
+++ b/www/html-partials/mainForm.hbs
@@ -84,7 +84,7 @@
 
     <div class="col-sm-2 d-flex align-items-end">
       <div class="form-group w-100">
-        <label for="street_number">Junto ao Número</label>
+        <label for="street_number">Junto ao Número (opcional)</label>
         <input size="4" class="form-control input-lg"
                id="street_number" name="Número postal do Local da Ocorrência" type="text">
       </div>
