--- a/www/html-partials/mainForm.hbs
+++ b/www/html-partials/mainForm.hbs
@@ -8,7 +8,7 @@
           <button aria-label="Remover Foto 1" type="button" class="btn btn-primary" id="remImg_1"><i class="fa fa-minus"></i></button>
         </div>
         <!-- [html-validate-disable-next attribute-allowed-values] -->
-        <img alt="Imagem 1" id="myImg_1" src="" class="col-xs-12">
+        <img alt="Imagem 1" id="myImg_1" src="" class="col-xs-12 anomaly-photo">
       </div>
       <div class="form-group img-container col-md">
         <div class="form-group col-xs-12 col-sm-6 col-md-3">
@@ -16,7 +16,7 @@
           <button aria-label="Remover Foto 2" type="button" class="btn btn-primary" id="remImg_2"><i class="fa fa-minus"></i></button>
         </div>
         <!-- [html-validate-disable-next attribute-allowed-values] -->
-        <img alt="Imagem 2" id="myImg_2" src="" class="col-xs-12">
+        <img alt="Imagem 2" id="myImg_2" src="" class="col-xs-12 anomaly-photo">
       </div>
       <div class="form-group img-container col-md">
         <div class="form-group col-xs-12">
@@ -24,7 +24,7 @@
           <button aria-label="Remover Foto 3" type="button" class="btn btn-primary" id="remImg_3"><i class="fa fa-minus"></i></button>
         </div>
         <!-- [html-validate-disable-next attribute-allowed-values] -->
-        <img alt="Imagem 3" id="myImg_3" src="" class="col-xs-12">
+        <img alt="Imagem 3" id="myImg_3" src="" class="col-xs-12 anomaly-photo">
       </div>
       <div class="form-group img-container col-md">
         <div class="form-group col-xs-12">
@@ -32,7 +32,7 @@
           <button aria-label="Remover Foto 4" type="button" class="btn btn-primary" id="remImg_4"><i class="fa fa-minus"></i></button>
         </div>
         <!-- [html-validate-disable-next attribute-allowed-values] -->
-        <img alt="Imagem 4" id="myImg_4" src="" class="col-xs-12">
+        <img alt="Imagem 4" id="myImg_4" src="" class="col-xs-12 anomaly-photo">
       </div>
     </div>
   </div>
@@ -90,6 +90,8 @@
       </div>
     </div>
    </div>
+
+   <div id="main_form_map"></div>
 
    <hr>
 
