--- a/www/html-partials/mainForm.hbs
+++ b/www/html-partials/mainForm.hbs
@@ -110,7 +110,25 @@
 
   <hr>
 
+  <h3>Mensagem</h3>
+
   <div class="row">
+    <div class="form-group col-sm pt-3">
+      <input type="checkbox" id="send_to_municipality_checkbox" name="send_to_municipality_checkbox" checked>
+      <label for="send_to_municipality_checkbox">Enviar para Município</label>
+    </div>
+    <div class="form-group col-sm">
+      <input type="checkbox" id="send_to_parish_checkbox" name="send_to_parish_checkbox" checked>
+      <label for="send_to_parish_checkbox">Enviar para Junta de Freguesia</label>
+    </div>
+    <div class="form-group col-sm">
+      <input type="checkbox" id="message_summary" name="message_summary" checked>
+      <label for="message_summary">Incluir resumo no final</label>
+    </div>
+    <div class="form-group col-sm">
+      <input type="checkbox" id="APP_credits" name="APP_credits" checked>
+      <label for="APP_credits">Incluir créditos desta APP</label>
+    </div>
   </div>
 
   <button aria-label="Gerar mensagem a enviar" type="button" class="btn btn-success" id="generate_message">Gerar texto</button>
