--- a/www/html-partials/mainMessageInline.hbs
+++ b/www/html-partials/mainMessageInline.hbs
@@ -11,6 +11,9 @@
     <div class="col-xs-12">
       <p></p>
       <button aria-label="Enviar Mensagem" type="button" class="btn btn-success" id="send_email_btn">Enviar</button>
+      <div id="spinner-send_email_btn" class="spinner-border text-success m-3" role="status">
+        <span class="sr-only">Loading...</span>
+      </div>
     </div>
   </div>
 </div>
