--- a/www/html-partials/mainForm.hbs
+++ b/www/html-partials/mainForm.hbs
@@ -95,7 +95,7 @@
 
   <hr>
 
-  <h3>Anomalia</h3>
+  <h3>Anomalia ou Pedido</h3>
 
   <div class="row">
     <div id="anomalies" class="form-group col-sm">
