adcionar botão donativo e botão para erros e sugestões

--- a/www/html-partials/sidebar.hbs
+++ b/www/html-partials/sidebar.hbs
@@ -31,7 +31,13 @@
               <a>Política de privacidade</a>
             </li>
             <li>
+              <a href="https://github.com/jfoclpf/in-my-district/issues">Erros e sugestões</a>
+            </li>
+            <li>
               <a href="https://github.com/jfoclpf/in-my-district.git">O código desta App</a>
+            </li>
+            <li>
+              <a href="https://www.paypal.com/donate?hosted_button_id=J7F3ALLQAFWEJ">Fazer um Donativo</a>
             </li>
             <li>
               <span class="version"></span>
