--- a/www/html-partials/scripts.hbs
+++ b/www/html-partials/scripts.hbs
@@ -13,7 +13,7 @@
 <!-- main.js needs to be the first app module to be loaded -->
 <script src="js/main.js"></script>
 <script src="js/sidebar.js"></script>
-<script src="js/credentials.js"></script>
+<script src="js/appSecrets.js"></script>
 <script src="js/contacts.js"></script>
 <script src="js/anomalies.js"></script>
 <script src="js/functions.js"></script>
