--- a/server/views/home.hbs
+++ b/server/views/home.hbs
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>No meu Bairro</title>
-  <link rel="icon" type="image/x-icon" href="https://nomeubairro.app/wp-content/uploads/2022/04/256.png">
+  <link rel="icon" type="image/x-icon" href="{{{websiteUrlOrigin}}}/wp-content/uploads/2022/04/256.png">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://nomeubairro.app/wp-content/themes/primaapp/style.css">
+  <link rel="stylesheet" href="{{{websiteUrlOrigin}}}/wp-content/themes/primaapp/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 </head>
 <body>
@@ -16,8 +16,8 @@
       <div class="row">
         <div class="site-branding">
           <h1 class="site-title">
-            <a href="https://nomeubairro.app/" rel="home">
-		          <img src="https://nomeubairro.app/wp-content/uploads/2022/04/512-2.png" alt="No Meu Bairro!">
+            <a href="{{{websiteUrlOrigin}}}/" rel="home">
+		          <img src="{{{websiteUrlOrigin}}}/wp-content/uploads/2022/04/512-2.png" alt="No Meu Bairro!">
                 <span>No Meu Bairro!</span>
             </a>
           </h1>
