first commit to try to convert modules to ES6 modules

--- a/app/www/html-partials/scripts.hbs
+++ b/app/www/html-partials/scripts.hbs
@@ -11,18 +11,18 @@
 <script src="js/res/crypto-js.js"></script>
 
 <!-- main.js needs to be the first app module to be loaded -->
-<script src="js/main.js"></script>
-<script src="js/sidebar.js"></script>
+<script type="module" src="js/main.js"></script>
+<script type="module" src="js/sidebar.js"></script>
 <script src="js/appSecrets.js"></script>
-<script src="js/contacts.js"></script>
-<script src="js/anomalies.js"></script>
-<script src="js/functions.js"></script>
-<script src="js/file.js"></script>
-<script src="js/dbServerLink.js"></script>
-<script src="js/historic.js"></script>
-<script src="js/map.js"></script>
-<script src="js/photos.js"></script>
-<script src="js/form.js"></script>
-<script src="js/personalInfo.js"></script>
-<script src="js/localization.js"></script>
-<script src="js/text.js"></script>
+<script type="module" src="js/contacts.js"></script>
+<script type="module" src="js/anomalies.js"></script>
+<script type="module" src="js/functions.js"></script>
+<script type="module" src="js/file.js"></script>
+<script type="module" src="js/dbServerLink.js"></script>
+<script type="module" src="js/historic.js"></script>
+<script type="module" src="js/map.js"></script>
+<script type="module" src="js/photos.js"></script>
+<script type="module" src="js/form.js"></script>
+<script type="module" src="js/personalInfo.js"></script>
+<script type="module" src="js/localization.js"></script>
+<script type="module" src="js/text.js"></script>
