--- a/app/www/html-partials/head.hbs
+++ b/app/www/html-partials/head.hbs
@@ -16,12 +16,4 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-<link rel="stylesheet" href="css/res/bootstrap.min.css">
-<link rel="stylesheet" href="css/res/jquery-ui.min.css">
-<link rel="stylesheet" href="css/res/font-awesome.min.css">
-<link rel="stylesheet" href="css/sidebar.css">
-<link rel="stylesheet" type="text/css" href="css/main.css">
-<link rel="stylesheet" type="text/css" href="css/res/jAlert.css">
-<link rel="stylesheet" type="text/css" href="css/res/leaflet.css">
-<link rel="stylesheet" type="text/css" href="css/res/MarkerCluster.css">
-<link rel="stylesheet" type="text/css" href="css/res/MarkerCluster.Default.css">
+{{> stylesheets}}
