evaluate on playstore link

--- a/app/www/html-partials/sidebar.hbs
+++ b/app/www/html-partials/sidebar.hbs
@@ -30,6 +30,9 @@
             <li id="privacy_policy_shows">
               <a>Política de privacidade</a>
             </li>
+            <li id="app_evaluation_link">
+              <span>Avalie na PlayStore</span>
+            </li>
             <li>
               <a href="https://github.com/jfoclpf/in-my-district/issues">Erros e sugestões</a>
             </li>
