--- a/app/www/html-partials/sidebar.hbs
+++ b/app/www/html-partials/sidebar.hbs
@@ -30,7 +30,7 @@
             <li id="privacy_policy_shows">
               <a>Política de privacidade</a>
             </li>
-            <li id="app_evaluation_link">
+            <li id="playstore_evaluation_link">
               <span>Avalie na PlayStore</span>
             </li>
             <li>
